correcciones y agregado de nuevos mensajes en endpoints en swagger
